tests/should_succeed/global.jou
import "stdlib/io.jou"

global x: int

def increment_x() -> None:
    x++

def main() -> int:
    printf("%d\n", x)  # Output: 0
    increment_x()
    printf("%d\n", x)  # Output: 1
    increment_x()
    printf("%d\n", x)  # Output: 2

    return 0
