tests/syntax_error/infinite_c_style_for.jou
def main() -> int:
    for ;;:  # Error: expected an expression, got ';'
        return 1
    return 0
